# job

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  job-search.toml  job.toml  jobs.db  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml  search.yml
job/: __init__.py  __main__.py  __version__.py  add.py  app.py  cli_app.py  commands.py  db.py  db_app.py  fit.py  gh.py  lm.py  main.py  search.py  search_config.py  upt.py  utils.py
job/config/: __init__.py  config.py  extensions.py  models.py  settings.py
job/core/: __init__.py  agents.py  config.py  context.py  logging.py  models.py
job/fetchers/: __init__.py  base.py  browser.py  static.py
job/prompts/: application-writer.md  career-advisor.md
schema/: README.md  order-schema.sh  schema.cue  schema.json
scripts/: list_models.py
tests/: __init__.py  conftest.py  test_app.py  test_commands.py  test_config.py  test_fetchers.py  test_models.py  test_validation.py
