[project]
name = "job"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "playwright>=1.57.0",
  "pydantic>=2.12.5",
  "pydantic-ai>=1.44.0",
  "requests>=2.32.5",
  "rich>=13.9.0",
  "sqlmodel>=0.0.31",
  "tomli>=2.0.0",
  "typer>=0.21.1",
]

[project.scripts]
job = "job.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.uv]
package = true
