[project]
name = "job"
version = "0.2.0"
description = "AI-powered job hunting automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "playwright>=1.57.0",
  "pydantic>=2.12.5",
  "pydantic-ai>=1.44.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.5",
  "rich>=13.9.0",
  "sqlmodel>=0.0.31",
  "tomli>=2.0.0",
  "typer>=0.21.1",
]

[project.scripts]
job = "job.main:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "job-search.toml"
search = "https://raw.githubusercontent.com/xrsl/job/v{current_version}/schema/schema.json"
replace = "https://raw.githubusercontent.com/xrsl/job/v{new_version}/schema/schema.json"

[[tool.bumpversion.files]]
filename = "README.md"
search = "https://raw.githubusercontent.com/xrsl/job/v{current_version}/schema/schema.json"
replace = "https://raw.githubusercontent.com/xrsl/job/v{new_version}/schema/schema.json"

[[tool.bumpversion.files]]
filename = "schema/README.md"
search = "https://raw.githubusercontent.com/xrsl/job/v{current_version}/schema/schema.json"
replace = "https://raw.githubusercontent.com/xrsl/job/v{new_version}/schema/schema.json"

[tool.coverage.run]
source = ["job"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.pytest]
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "--cov=job",
  "--cov-report=term-missing",
  "--cov-report=html",
]

[tool.uv]
package = true
